# nomon

./: .gitignore  README.md  pyproject.toml
docs/: design.md
examples/: blog-task.yaml  code-task.yaml  translation-task.yaml  ui-task.yaml
prompts/: build-handoff.md  install.md  usage.md
schemas/: rubric-v1.yaml
src/openclaw_gnomon/: __init__.py  cli.py  installer.py  orchestrator.py  report.py  rubric.py  rubric_engine.py  spawner.py  task_schema.py  verifier.py
src/openclaw_gnomon/gates/: __init__.py  blog_gate.py  code_gate.py  translation_gate.py  ui_gate.py  video_gate.py
src/openclaw_gnomon/skill_template/: rubric_template.yaml
src/openclaw_nomon/: __init__.py  __main__.py  cli.py  installer.py  orchestrator.py  paths.py  report.py  rubric.py  spawner.py  task_schema.py  team_spawner.py  verifier.py
src/openclaw_nomon/gates/: __init__.py  base.py  blog_gate.py  code_gate.py  translation_gate.py  ui_gate.py
src/openclaw_nomon/skill_template/: SKILL.md
src/openclaw_ouroboros/: __init__.py  __main__.py  paths.py
tests/: conftest.py  test_gnomon_gates.py  test_gnomon_orchestrator.py  test_gnomon_report.py  test_gnomon_spawner.py  test_gnomon_task_schema.py  test_paths.py  test_rubric.py  test_rubric_engine.py  test_verifier.py  test_video_gate.py
verification/auto/: run_install_test.sh
verification/reviewers/: 01-install-correctness.md  02-security.md  03-ux.md  04-test-coverage.md  05-nomon-compat.md  05-ouroboros-compat.md  07-backward-compat.md
verification/scripts/: run_reviewers.sh  score_gate.py
