[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-gnomon"
version = "0.1.0"
description = "Gnomon: rubric-first evaluation harness for OpenClaw. Define what good looks like before writing."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jkf87", email = "jjoongoo@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "typer>=0.12,<1.0",
    "pyyaml>=6.0,<7.0",
    "rich>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<5.0",
]

[project.scripts]
openclaw-gnomon = "openclaw_gnomon.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
